test_regress/t/t_fuzz_always_bad.out
%Error: t/t_fuzz_always_bad.v:10:15: Can't find definition of 'a' in dotted variable: 'c.a'
   10 |    always @ c.a c:h;
      |               ^
%Error: t/t_fuzz_always_bad.v:10:19: Can't find definition of task/function: 'h'
   10 |    always @ c.a c:h;
      |                   ^
%Error-UNSUPPORTED: t/t_fuzz_always_bad.v:10:14: Unsupported: Complex statement in sensitivity list
   10 |    always @ c.a c:h;
      |              ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
